chore: update title and add description meta tag

--- a/index.html
+++ b/index.html
@@ -14,7 +14,11 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>UClimax</title>
+    <title>U CLIMAX</title>
+    <meta
+      name="description"
+      content="U CLIMAX 致力于让 Weiβ Schwarz 简中卡查更快速，让构筑与分享卡组更直观高效，为玩家带来流畅的构筑体验。"
+    />
 
     <link
       href="https://gcore.jsdelivr.net/npm/@mdi/font@7.x/css/materialdesignicons.min.css"
