feat: add Open Graph meta tags, image, and SEO keywords

--- a/index.html
+++ b/index.html
@@ -3,6 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" href="/uclimax.ico" />
+    <title>U CLIMAX</title>
+    <meta
+      name="keywords"
+      content="Weiβ Schwarz, Weiβ Schwarz Rose, WS, WSR, 简中卡查, 牌组构筑, 卡表, TCG, U CLIMAX, 黑白双翼"
+    />
+    <meta
+      name="description"
+      content="U CLIMAX 致力于让 Weiβ Schwarz 简中卡查更快速，让构筑与分享卡组更直观高效，为玩家带来流畅的构筑体验。"
+    />
 
     <!-- PWA Setting -->
     <link rel="manifest" href="/manifest.json" />
@@ -13,13 +22,17 @@
     <meta name="mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
 
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>U CLIMAX</title>
+    <!-- Open Graph Tag -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://uclimax.cn/" />
+    <meta property="og:title" content="U CLIMAX" />
     <meta
-      name="description"
+      property="og:description"
       content="U CLIMAX 致力于让 Weiβ Schwarz 简中卡查更快速，让构筑与分享卡组更直观高效，为玩家带来流畅的构筑体验。"
     />
+    <meta property="og:image" content="https://uclimax.cn/og-image.png" />
 
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       href="https://gcore.jsdelivr.net/npm/@mdi/font@7.x/css/materialdesignicons.min.css"
       rel="stylesheet"
