chore: update Open Graph image metadata

--- a/index.html
+++ b/index.html
@@ -31,8 +31,9 @@
       content="U CLIMAX 致力于让 Weiβ Schwarz 简中卡查更快速，让构筑与分享卡组更直观高效，为玩家带来流畅的构筑体验。"
     />
     <meta property="og:image" content="https://uclimax.cn/og-image.png" />
-    <meta property="og:image:width" content="1200" />
-    <meta property="og:image:height" content="630" />
+    <meta property="og:image:width" content="2110" />
+    <meta property="og:image:height" content="1332" />
+    <meta property="og:image:alt" content="UCLIMAX Preview" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
