chore: update MDI font CDN and add SRI

--- a/index.html
+++ b/index.html
@@ -37,8 +37,10 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
-      href="https://gcore.jsdelivr.net/npm/@mdi/font@7.x/css/materialdesignicons.min.css"
       rel="stylesheet"
+      href="https://cdn.jsdmirror.com/npm/@mdi/font@7.x/css/materialdesignicons.min.css"
+      integrity="sha384-HphS8cQyN+eYiJ5PMbzShG6qZdRtvHPVLPkYb8JwMkmNgaIxrFVDhQe3jIbq3EZ2"
+      crossorigin="anonymous"
     />
   </head>
   <body>
