--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       rel="stylesheet"
-      href="https://cdn.jsdmirror.com/npm/@mdi/font@7.x/css/materialdesignicons.min.css"
+      href="https://jsd.onmicrosoft.cn/npm/@mdi/font@7.x/css/materialdesignicons.min.css"
       integrity="sha384-HphS8cQyN+eYiJ5PMbzShG6qZdRtvHPVLPkYb8JwMkmNgaIxrFVDhQe3jIbq3EZ2"
       crossorigin="anonymous"
     />
